updated the files pc to github

--- a/location_project/landpage.html
+++ b/location_project/landpage.html
@@ -201,6 +201,7 @@
 <body>
     
     <header>
+        <img src="">
         <nav>
             <div class="logo"></div>
             <ul class="nav-links">
