--- a/lab0/tagtest1.html
+++ b/lab0/tagtest1.html
@@ -1,75 +1,237 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Basic Application Form</title>
-    <style>
-        .hidden {
-            display: none;
-        }
-        .container {
-            width: 200px;
-            margin: auto;
-            border: 1px solid black;
-            padding: 20px;
-        }
-        button:hover {
-            background-color: green;
-            color: white;
-        }
-        .title {
-            font-weight: bold;
-            text-transform: uppercase;
-            text-align: center;
-        }
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-    </style>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width,initial-scale=1" />
+        <title>Professional Application Form</title>
+        <style>
+                :root{
+                        --accent:#2b6ef6;
+                        --muted:#6b7280;
+                        --bg:#f5f7fb;
+                        --card:#ffffff;
+                        --success:#16a34a;
+                        --danger:#dc2626;
+                }
+                *{box-sizing:border-box;font-family:Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial}
+                body{margin:0;background:linear-gradient(180deg,#eef2ff, #f8fafc);display:flex;align-items:center;justify-content:center;min-height:100vh;padding:24px}
+                .card{width:100%;max-width:760px;background:var(--card);border-radius:12px;box-shadow:0 8px 30px rgba(15,23,42,0.08);padding:28px;overflow:hidden}
+                .header{display:flex;align-items:center;gap:16px;margin-bottom:16px}
+                .logo{width:56px;height:56px;border-radius:10px;background:linear-gradient(135deg,var(--accent),#7c3aed);display:flex;align-items:center;justify-content:center;color:white;font-weight:700}
+                h1{margin:0;font-size:1.15rem}
+                p.lead{margin:0;color:var(--muted);font-size:0.95rem}
+
+                form{display:grid;grid-template-columns:1fr 1fr;gap:16px;margin-top:18px}
+                .full{grid-column:1/-1}
+                label{display:block;font-size:0.85rem;color:var(--muted);margin-bottom:6px}
+                input[type="text"],input[type="email"],input[type="tel"],textarea,select{width:100%;padding:10px 12px;border:1px solid #e6e9ef;border-radius:8px;background:#fff;transition:box-shadow .12s,border-color .12s}
+                input:focus,textarea:focus,select:focus{outline:none;border-color:var(--accent);box-shadow:0 6px 18px rgba(43,110,246,0.12)}
+                .hint{font-size:0.8rem;color:var(--muted);margin-top:6px}
+
+                .gender, .checkboxes{display:flex;gap:10px;align-items:center}
+                .radio{padding:8px 12px;border-radius:8px;border:1px solid #e6e9ef;cursor:pointer;background:#fff}
+                .radio input{margin-right:8px}
+
+                .range-wrap{display:flex;gap:12px;align-items:center}
+                input[type="range"]{flex:1}
+                .count{min-width:48px;text-align:center;padding:8px;border-radius:8px;background:#f3f4f6;color:var(--muted)}
+
+                .file{display:flex;gap:12px;align-items:center}
+                .file input{padding:6px}
+
+                .progress-row{display:flex;align-items:center;gap:12px}
+                progress{width:100%;height:14px;border-radius:8px;overflow:hidden}
+
+                .actions{display:flex;gap:12px;justify-content:flex-end;margin-top:12px}
+                button.primary{background:var(--accent);color:white;padding:10px 16px;border-radius:10px;border:0;cursor:pointer}
+                button.ghost{background:transparent;border:1px solid #e6e9ef;padding:10px 16px;border-radius:10px;cursor:pointer}
+                button:disabled{opacity:0.6;cursor:not-allowed}
+
+                .summary{padding:12px;background:#f8fafc;border-radius:8px;border:1px dashed #e6eef9;color:var(--muted);font-size:0.95rem}
+
+                .modal{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:rgba(2,6,23,0.45);}
+                .modal .sheet{background:white;padding:20px;border-radius:12px;max-width:520px;width:92%;}
+
+                @media (max-width:720px){form{grid-template-columns:1fr} .header{gap:10px}}
+        </style>
 </head>
 <body>
-<div class="container">
-    <div class="title">Application Form</div>
+<div class="card" role="region" aria-label="Application form">
+        <div class="header">
+                <div class="logo">AP</div>
+                <div style="flex:1">
+                        <h1>Application Form</h1>
+                        <p class="lead">Please complete the form below. Required fields are marked with *</p>
+                </div>
+        </div>
 
-    <form id="myForm">
-        Email:
-        <input type="email" name="email" required><br><br>
-        Rating (1-10):
-        <input type="number" min="1" max="10" id="num" required><br><br>
-        Gender:
-        <input type="radio" name="gender" checked> Male
-        <input type="radio" name="gender"> Female
-        <br><br>
-        <input type="checkbox" required> I Agree
-        <br><br>
-        Progress:
-        <progress value="50" max="100"></progress>
-        <br><br>
-        <button type="button" id="btn" onclick="changeText()">Submit</button>
-    </form>
-    <br>
-    <a href="https://example.com" target="_blank">Visit Example</a>
-    <p id="result"></p>
+        <form id="myForm" novalidate>
+                <div>
+                        <label for="first">First Name *</label>
+                        <input id="first" name="first" type="text" placeholder="Jane" required>
+                </div>
+
+                <div>
+                        <label for="last">Last Name *</label>
+                        <input id="last" name="last" type="text" placeholder="Doe" required>
+                </div>
+
+                <div class="full">
+                        <label for="email">Email *</label>
+                        <input id="email" name="email" type="email" placeholder="you@example.com" required>
+                        <div class="hint" id="emailHint"></div>
+                </div>
+
+                <div>
+                        <label for="phone">Phone</label>
+                        <input id="phone" name="phone" type="tel" placeholder="(555) 555-0123">
+                </div>
+
+                <div>
+                        <label>Rating (1-10) *</label>
+                        <div class="range-wrap">
+                                <input id="rating" type="range" min="1" max="10" value="5">
+                                <div class="count" id="ratingVal">5</div>
+                        </div>
+                </div>
+
+                <div>
+                        <label>Gender</label>
+                        <div class="gender">
+                                <label class="radio"><input type="radio" name="gender" value="male" checked> Male</label>
+                                <label class="radio"><input type="radio" name="gender" value="female"> Female</label>
+                                <label class="radio"><input type="radio" name="gender" value="other"> Other</label>
+                        </div>
+                </div>
+
+                <div class="full">
+                        <label for="about">About You</label>
+                        <textarea id="about" name="about" rows="4" maxlength="400" placeholder="A short bio or motivation..."></textarea>
+                        <div class="hint" id="chars">0 / 400</div>
+                </div>
+
+                <div>
+                        <label>Resume (optional)</label>
+                        <div class="file">
+                                <input id="resume" type="file" accept=".pdf,.doc,.docx">
+                                <div class="hint" id="fileName">No file chosen</div>
+                        </div>
+                </div>
+
+                <div>
+                        <label>Agreement *</label>
+                        <div class="checkboxes">
+                                <label><input id="agree" type="checkbox" required> I confirm the information is correct</label>
+                        </div>
+                </div>
+
+                <div class="full">
+                        <div class="progress-row">
+                                <progress id="completion" value="0" max="100"></progress>
+                                <div class="hint" id="completionTxt">0%</div>
+                        </div>
+                </div>
+
+                <div class="full actions">
+                        <button type="button" class="ghost" id="resetBtn">Reset</button>
+                        <button type="submit" class="primary" id="submitBtn">Submit Application</button>
+                </div>
+        </form>
+
+        <div style="margin-top:14px" class="summary" id="liveSummary">
+                <strong>Live Summary:</strong> <span id="summaryText">No data yet.</span>
+        </div>
 </div>
+
+<div class="modal" id="modal">
+        <div class="sheet">
+                <h3>Application Submitted</h3>
+                <p id="modalBody"></p>
+                <div style="display:flex;justify-content:flex-end;gap:10px;margin-top:14px">
+                        <button id="closeModal" class="primary">Close</button>
+                </div>
+        </div>
+</div>
+
 <script>
-    console.log(new Date());
-    var a = 5;
-    var b = 3;
-    var sum = a + b;
-    console.log("Sum:", sum);
-    var num = 15;
-    if(num > 10) {
-        console.log("Greater");
-    }
-    function changeText() {
-        document.getElementById("btn").innerHTML = "Clicked";
-    }
-    document.getElementById("myForm").addEventListener("submit", function(event){
-        event.preventDefault();
-        document.getElementById("result").innerHTML = "Form submission prevented!";
-    });
+        // Elements
+        const form = document.getElementById('myForm');
+        const rating = document.getElementById('rating');
+        const ratingVal = document.getElementById('ratingVal');
+        const about = document.getElementById('about');
+        const chars = document.getElementById('chars');
+        const resume = document.getElementById('resume');
+        const fileName = document.getElementById('fileName');
+        const completion = document.getElementById('completion');
+        const completionTxt = document.getElementById('completionTxt');
+        const summaryText = document.getElementById('summaryText');
+        const email = document.getElementById('email');
+        const emailHint = document.getElementById('emailHint');
+        const submitBtn = document.getElementById('submitBtn');
+        const resetBtn = document.getElementById('resetBtn');
+        const modal = document.getElementById('modal');
+        const modalBody = document.getElementById('modalBody');
+        const closeModal = document.getElementById('closeModal');
+
+        // Live updates
+        rating.addEventListener('input', ()=>{ratingVal.textContent = rating.value; updateSummary(); updateCompletion();});
+        about.addEventListener('input', ()=>{chars.textContent = `${about.value.length} / ${about.maxLength}`; updateSummary(); updateCompletion();});
+        resume.addEventListener('change', ()=>{ fileName.textContent = resume.files[0]? resume.files[0].name : 'No file chosen'; updateCompletion();});
+        email.addEventListener('input', ()=>{ validateEmail(); updateSummary(); updateCompletion(); });
+
+        // Simple email validation hint
+        function validateEmail(){
+                const v = email.value.trim();
+                if(!v){ emailHint.textContent = ''; return; }
+                const ok = /^[^@\s]+@[^@\s]+\.[^@\s]+$/.test(v);
+                emailHint.textContent = ok? 'Looks good' : 'Please enter a valid email address';
+                emailHint.style.color = ok? 'var(--success)' : 'var(--danger)';
+        }
+
+        // Summary
+        function updateSummary(){
+                const first = document.getElementById('first').value.trim();
+                const last = document.getElementById('last').value.trim();
+                const g = form.gender.value;
+                summaryText.textContent = `${first || '-'} ${last || '-'} · ${email.value || '-'} · Rating ${rating.value} · ${g}`;
+        }
+
+        // Completion calculation (rough)
+        function updateCompletion(){
+                const fields = [document.getElementById('first'), document.getElementById('last'), email, document.getElementById('agree')];
+                let filled = 0;
+                fields.forEach(f=>{ try { if((f.type==='checkbox' && f.checked) || (f.value && f.value.trim())) filled++; } catch(e){} });
+                // include rating and about small weight
+                if(rating.value) filled += 0.5;
+                if(about.value.trim()) filled += 0.5;
+                const percent = Math.round((filled / (fields.length + 1)) * 100);
+                completion.value = percent;
+                completionTxt.textContent = percent + '%';
+                submitBtn.disabled = percent < 50; // require some completion
+        }
+
+        // Reset
+        resetBtn.addEventListener('click', ()=>{ form.reset(); ratingVal.textContent = rating.value = 5; chars.textContent = `0 / ${about.maxLength}`; fileName.textContent='No file chosen'; updateSummary(); updateCompletion(); emailHint.textContent = ''; });
+
+        // Submit
+        form.addEventListener('submit', (e)=>{
+                e.preventDefault();
+                if(!form.checkValidity()){ form.reportValidity(); return; }
+                const data = new FormData(form);
+                const payload = Object.fromEntries(data.entries());
+                modalBody.innerHTML = `Thanks <strong>${payload.first || ''} ${payload.last || ''}</strong>.<br><br>Your application rating: <strong>${payload.rating || rating.value}</strong>.<br><br>We will contact you at <strong>${payload.email || '-'}</strong>.`;
+                modal.style.display = 'flex';
+        });
+
+        closeModal.addEventListener('click', ()=>{ modal.style.display='none'; });
+        window.addEventListener('click', (ev)=>{ if(ev.target === modal) modal.style.display='none'; });
+
+        // initialize
+        updateSummary(); updateCompletion();
+
+        // Expose a small debug log
+        console.log('Application form loaded', new Date());
 </script>
 </body>
 </html>
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            >
