--- a/lab_before_workout/jquery_ajax/samp1.html
+++ b/lab_before_workout/jquery_ajax/samp1.html
@@ -5,7 +5,12 @@
     </head>
     <body>
         <p id="message">i am cse student</p>
-        <button id="btn">click</button>
+        Enter vlaue:
+        <input type="text">
+        <br><br>
+        <button id="btn">click to blur</button>
+        <p style="color:green"></p>
+
        
         <script src="samp1.js"></script>
     </body>
